# AISandbox

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
cli/: __init__.py  scaffold.py
config/: stack.yaml
data/: README.md
docker/: Dockerfile  docker-compose.yaml  entrypoint.sh
scripts/: chat.py  configure.py  default_stack.yaml  demo.py  eval.py
serving/: __init__.py  api.py  ui_chainlit.py  ui_streamlit.py
src/: README.md  __init__.py  llm_factory.py
templates/agentic_rag/: __init__.py  pipeline.py
templates/mcp_server/: __init__.py  pipeline.py
templates/multi_agent/: __init__.py  pipeline.py
templates/naive_rag/: __init__.py  pipeline.py
templates/structured_output/: __init__.py  pipeline.py
